<resources>
    <string name="app_name">To do list</string>
    <string name="til_criar_tarefa">Criar Tarefa</string>
    <string name="hint_titulo">Titulo</string>
    <string name="hint_desc">Descrição</string>
    <string name="hitn_data">Data</string>
    <string name="hint_hora">Hora</string>
    <string name="btn_criar_tarefa">Criar Tarefa</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="tarefas">Tarefas</string>
    <string name="cria_nova_tarefa">Cria nova tarefa</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
    <string name="oops_voc_n_o_tem_nenhuma_tarefa">Oops! Você não possui\n tarefas hoje!</string>
</resources>